--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -1,33 +1,33 @@
-name: تحديث المباريات يومياً
+name: Update Matches Data
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # كل يوم على الساعة 8 صباحاً UTC
-  workflow_dispatch:  # يدويًا لو أردت تشغيله من GitHub
+    - cron: '0 * * * *'  # كل ساعة
+  workflow_dispatch:      # أو يمكنك تشغيله يدويًا من واجهة GitHub Actions
 
 jobs:
   update-matches:
     runs-on: ubuntu-latest
 
     steps:
-    - name: استنساخ المستودع
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: تثبيت Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # تأكد من استخدام نسخة حديثة
 
-    - name: تثبيت الحزم
-      run: npm install axios
+      - name: Install dependencies
+        run: npm install
 
-    - name: تشغيل سكريبت تحديث المباريات
-      run: node scripts/generate-matches.js
+      - name: Run generate-matches.js
+        run: node scripts/generate-matches.js
 
-    - name: حفظ التغييرات ودفعها
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add data/matches.json
-        git commit -m "تحديث المباريات تلقائيًا"
-        git push
+      - name: Commit and push changes
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git add data/matches.json
+          git commit -m 'تحديث المباريات تلقائيًا بواسطة GitHub Action' || echo "No changes to commit"
+          git push
