--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -1,33 +1,34 @@
-name: Update Matches Data
+# .github/workflows/update-matches.yml
+name: Update Matches
 
 on:
   schedule:
-    - cron: '0 * * * *'  # كل ساعة
-  workflow_dispatch:      # أو يمكنك تشغيله يدويًا من واجهة GitHub Actions
+    - cron: '0 * * * *' # كل ساعة (يمكن تغييره إلى كل يوم مثلا)
+  workflow_dispatch:
 
 jobs:
   update-matches:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # تأكد من استخدام نسخة حديثة
+          node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install Dependencies
+        run: npm install axios
 
-      - name: Run generate-matches.js
+      - name: Run Script
         run: node scripts/generate-matches.js
 
-      - name: Commit and push changes
+      - name: Commit Changes
         run: |
-          git config user.name 'github-actions[bot]'
-          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add data/matches.json
-          git commit -m 'تحديث المباريات تلقائيًا بواسطة GitHub Action' || echo "No changes to commit"
+          git commit -m "🔄 Update matches data"
           git push
