--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -1,4 +1,3 @@
-
 name: Update Matches
 
 on:
@@ -27,7 +26,9 @@ jobs:
 
       - name: Commit Changes
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add data/matches.json
           git diff --cached --quiet || (git commit -m "🔄 Update matches data" && git push)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # تمرير الرمز المميز لتوثيق عملية push
