--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -22,23 +22,23 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install Dependencies
+      - name: Prepare Environment
         run: |
-          npm install axios@1.6.7 cheerio@1.0.0-rc.12 https@latest --no-package-lock --global-style --no-save
+          mkdir -p assets/data
+          npm install axios@1.6.7 cheerio@1.0.0-rc.12 --no-package-lock --no-save
 
-      - name: Create and Run Scraper
+      - name: Run Scraper
         env:
           SCRAPER_API_KEY: ${{ secrets.SCRAPER_API_KEY }}
         run: |
-          cat > scrape.js << 'EOF'
+          cat << 'EOF' > scrape.js
           const axios = require('axios').create({
             httpsAgent: require('https').Agent({ keepAlive: true })
           });
           const cheerio = require('cheerio');
           const fs = require('fs');
           const path = require('path');
-
-          // قائمة البطولات المهمة
+          
           const IMPORTANT_LEAGUES = {
             'الدوري السعودي': 564,
             'الدوري الإنجليزي': 39,
@@ -53,10 +53,11 @@ jobs:
               const targetUrl = 'https://www.kooora.com/';
               const apiUrl = `https://api.scraperapi.com/?api_key=${process.env.SCRAPER_API_KEY}&url=${encodeURIComponent(targetUrl)}`;
               
-              console.log('🔍 جاري جلب البيانات من:', targetUrl);
+              console.log('Fetching data from:', targetUrl);
               const response = await axios.get(apiUrl, {
                 headers: {
-                  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'
+                  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36',
+                  'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8'
                 },
                 timeout: 30000
               });
@@ -64,63 +65,46 @@ jobs:
               const $ = cheerio.load(response.data);
               const matches = [];
 
-              // استخراج المباريات
-              $('.match').each((i, element) => {
+              // استخراج المباريات - تحتاج لتعديل حسب هيكل موقع كوورة
+              $('.match-row').each((i, element) => {
                 const match = $(element);
-                const leagueName = match.closest('.league')?.find('.name')?.text()?.trim() || '';
+                const leagueName = match.closest('.league-container')?.find('.league-name')?.text()?.trim() || '';
                 
-                // تصفية البطولات غير المهمة
                 if (!Object.keys(IMPORTANT_LEAGUES).some(name => leagueName.includes(name))) return;
 
-                const homeTeam = {
-                  name: match.find('.home .name')?.text()?.trim() || 'فريق غير معروف',
-                  logo: match.find('.home .logo')?.attr('src') || ''
-                };
-
-                const awayTeam = {
-                  name: match.find('.away .name')?.text()?.trim() || 'فريق غير معروف',
-                  logo: match.find('.away .logo')?.attr('src') || ''
-                };
-
                 matches.push({
-                  id: match.attr('data-id') || `match-${Date.now()}-${i}`,
-                  homeTeam,
-                  awayTeam,
-                  score: match.find('.score')?.text()?.trim() || 'vs',
-                  time: match.find('.time')?.text()?.trim() || 'الآن',
+                  id: match.attr('id') || `match-${Date.now()}-${i}`,
+                  homeTeam: {
+                    name: match.find('.team-home')?.text()?.trim() || 'فريق غير معروف',
+                    logo: match.find('.team-home img')?.attr('src') || ''
+                  },
+                  awayTeam: {
+                    name: match.find('.team-away')?.text()?.trim() || 'فريق غير معروف',
+                    logo: match.find('.team-away img')?.attr('src') || ''
+                  },
+                  score: match.find('.match-score')?.text()?.trim() || 'vs',
+                  time: match.find('.match-time')?.text()?.trim() || 'الآن',
                   date: new Date().toISOString(),
                   league: {
                     id: IMPORTANT_LEAGUES[Object.keys(IMPORTANT_LEAGUES).find(name => leagueName.includes(name))] || 0,
                     name: leagueName
                   },
-                  venue: match.find('.venue')?.text()?.trim() || 'ملعب غير معروف',
-                  broadcast: extractBroadcastInfo(match),
+                  venue: match.find('.match-venue')?.text()?.trim() || 'ملعب غير معروف',
+                  broadcast: [],
                   manualChannels: leagueName.includes('السعودي') ? ['bein SPORTS HD1'] : []
                 });
               });
 
-              // حفظ البيانات
-              const outputPath = path.join('assets', 'data', 'matches.json');
-              fs.writeFileSync(outputPath, JSON.stringify(matches, null, 2));
-              console.log(`✅ تم حفظ ${matches.length} مباراة بنجاح في ${outputPath}`);
+              fs.writeFileSync('assets/data/matches.json', JSON.stringify(matches, null, 2));
+              console.log(`Successfully saved ${matches.length} matches`);
 
             } catch (error) {
-              console.error('❌ فشل في جلب البيانات:', error.message);
+              console.error('Scraping failed:', error.message);
               createFallbackData();
             }
           }
 
-          function extractBroadcastInfo(match) {
-            const broadcastText = match.find('.broadcast')?.text()?.trim();
-            if (!broadcastText) return [];
-            
-            return broadcastText.split(',')
-              .map(channel => ({ name: channel.trim() }))
-              .filter(ch => ch.name.includes('SPORTS') || ch.name.includes('HD'));
-          }
-
           function createFallbackData() {
-            console.log('⚠️ إنشاء بيانات احتياطية...');
             const fallbackMatches = [
               {
                 id: 'fallback-1',
@@ -136,9 +120,12 @@ jobs:
               }
             ];
             
-            const outputPath = path.join('assets', 'data', 'matches.json');
-            fs.writeFileSync(outputPath, JSON.stringify(fallbackMatches, null, 2));
-            console.log('✅ تم حفظ البيانات الاحتياطية');
+            if (!fs.existsSync('assets/data')) {
+              fs.mkdirSync('assets/data', { recursive: true });
+            }
+            
+            fs.writeFileSync('assets/data/matches.json', JSON.stringify(fallbackMatches, null, 2));
+            console.log('Fallback data created');
           }
 
           scrapeMatches();
@@ -148,14 +135,14 @@ jobs:
 
       - name: Verify Data
         run: |
-          echo "📄 محتوى ملف المباريات:"
+          echo "File content:"
           cat assets/data/matches.json
           echo ""
-          echo "عدد المباريات: $(jq length assets/data/matches.json)"
+          echo "Match count: $(jq length assets/data/matches.json)"
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add assets/data/matches.json
-          git diff --cached --quiet || (git commit -m "🔄 تحديث تلقائي لبيانات المباريات [skip ci]" && git push)
+          git diff --cached --quiet || (git commit -m "🔄 Auto-update matches data [skip ci]" && git push)
