--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -50,7 +50,7 @@ jobs:
 
           async function scrapeMatches() {
             try {
-              const targetUrl = 'https://www.kooora.com/%D9%83%D8%B1%D8%A9-%D8%A7%D9%84%D9%82%D8%AF%D9%85/%D9%85%D8%A8%D8%A7%D8%B1%D9%8A%D8%A7%D8%AA-%D8%A7%D9%84%D9%8A%D9%88%D9%85';
+              const targetUrl = 'https://kooora.live-kooora.com/';
               const apiUrl = `https://api.scraperapi.com/?api_key=${process.env.SCRAPER_API_KEY}&url=${encodeURIComponent(targetUrl)}`;
               
               console.log('Fetching data from:', targetUrl);
