--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -2,7 +2,7 @@ name: Update Matches Data
 
 on:
   schedule:
-    - cron: '0 */3 * * *'  # كل 3 ساعات (بدلاً من 6)
+    - cron: '0 */3 * * *'  # Runs every 3 hours
   workflow_dispatch:
 
 permissions:
@@ -39,8 +39,8 @@ jobs:
 
           const BASE_URL = 'https://www.kooora.com';
           const TARGET_URLS = [
-            `${BASE_URL}/?show=matchs`,    # مباريات اليوم
-            `${BASE_URL}/?show=matchs&d=1` # مباريات الغد
+            `${BASE_URL}/?show=matchs`,    // Today's matches
+            `${BASE_URL}/?show=matchs&d=1` // Tomorrow's matches
           ];
 
           async function scrapeMatches() {
@@ -61,29 +61,29 @@ jobs:
                 const $ = cheerio.load(response.data);
                 const matches = [];
 
-                // استخراج المباريات حسب الهيكل الجديد
+                // Extract matches data
                 $('.match-item, .match-card').each((i, element) => {
                   const match = $(element);
                   const leagueElement = match.closest('.league-section');
                   
                   const homeTeam = {
-                    name: match.find('.home-team, .team-home').text().trim() || 'فريق غير معروف',
+                    name: match.find('.home-team, .team-home').text().trim() || 'Unknown Team',
                     logo: match.find('.home-team img, .team-home img').attr('src') || ''
                   };
 
                   const awayTeam = {
-                    name: match.find('.away-team, .team-away').text().trim() || 'فريق غير معروف',
+                    name: match.find('.away-team, .team-away').text().trim() || 'Unknown Team',
                     logo: match.find('.away-team img, .team-away img').attr('src') || ''
                   };
 
                   const league = {
-                    name: leagueElement.find('.league-name').text().trim() || 'بطولة غير معروفة',
+                    name: leagueElement.find('.league-name').text().trim() || 'Unknown League',
                     logo: leagueElement.find('img').attr('src') || ''
                   };
 
                   const channels = [];
                   match.find('.channels img, .broadcasters img').each((i, el) => {
-                    channels.push($(el).attr('alt') || $(el).attr('title') || 'قناة غير معروفة');
+                    channels.push($(el).attr('alt') || $(el).attr('title') || 'Unknown Channel');
                   });
 
                   matches.push({
@@ -94,16 +94,16 @@ jobs:
                     time: match.find('.match-time, .time').text().trim() || '--:--',
                     date: new Date().toISOString(),
                     league,
-                    channels: channels.length ? channels : ['غير معروف'],
-                    status: match.hasClass('live') ? 'مباشر' : 
-                           match.hasClass('finished') ? 'منتهي' : 'قادم'
+                    channels: channels.length ? channels : ['Unknown'],
+                    status: match.hasClass('live') ? 'Live' : 
+                           match.hasClass('finished') ? 'Finished' : 'Upcoming'
                   });
                 });
 
                 allMatches = [...allMatches, ...matches];
               }
 
-              // تصنيف المباريات حسب اليوم والغد
+              // Categorize matches by date
               const today = new Date().toISOString().split('T')[0];
               const result = {
                 today: allMatches.filter(m => m.date.includes(today)),
@@ -112,10 +112,10 @@ jobs:
               };
 
               fs.writeFileSync('assets/data/matches.json', JSON.stringify(result, null, 2));
-              console.log(`✅ تم حفظ ${allMatches.length} مباراة بنجاح`);
+              console.log(`Successfully saved ${allMatches.length} matches`);
 
             } catch (error) {
-              console.error('❌ فشل في جلب البيانات:', error.message);
+              console.error('Scraping failed:', error.message);
               createFallbackData();
             }
           }
@@ -125,14 +125,14 @@ jobs:
               today: [
                 {
                   id: 'fallback-1',
-                  homeTeam: { name: 'الهلال', logo: '' },
-                  awayTeam: { name: 'النصر', logo: '' },
+                  homeTeam: { name: 'Al Hilal', logo: '' },
+                  awayTeam: { name: 'Al Nassr', logo: '' },
                   score: 'VS',
                   time: '21:00',
                   date: new Date().toISOString(),
-                  league: { name: 'الدوري السعودي', logo: '' },
+                  league: { name: 'Saudi League', logo: '' },
                   channels: ['bein SPORTS HD1'],
-                  status: 'قادم'
+                  status: 'Upcoming'
                 }
               ],
               tomorrow: [],
@@ -144,7 +144,7 @@ jobs:
             }
             
             fs.writeFileSync('assets/data/matches.json', JSON.stringify(fallbackData, null, 2));
-            console.log('🔄 تم إنشاء بيانات احتياطية');
+            console.log('Created fallback data');
           }
 
           scrapeMatches();
@@ -154,14 +154,14 @@ jobs:
 
       - name: Verify Data
         run: |
-          echo "تحقق من البيانات:"
-          echo "عدد مباريات اليوم: $(jq '.today | length' assets/data/matches.json)"
-          echo "عدد مباريات الغد: $(jq '.tomorrow | length' assets/data/matches.json)"
-          echo "آخر تحديث: $(jq -r '.updatedAt' assets/data/matches.json)"
+          echo "Data verification:"
+          echo "Today's matches: $(jq '.today | length' assets/data/matches.json)"
+          echo "Tomorrow's matches: $(jq '.tomorrow | length' assets/data/matches.json)"
+          echo "Last updated: $(jq -r '.updatedAt' assets/data/matches.json)"
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add assets/data/matches.json
-          git diff --cached --quiet || (git commit -m "🔄 تحديث تلقائي لبيانات المباريات [skip ci]" && git push)
+          git diff --cached --quiet || (git commit -m "🔄 Auto-update matches data [skip ci]" && git push)
