--- a/.github/workflows/update-matches.yml
+++ b/.github/workflows/update-matches.yml
@@ -2,7 +2,7 @@ name: Update Matches Data
 
 on:
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 */3 * * *'  # كل 3 ساعات
   workflow_dispatch:
 
 jobs:
@@ -17,10 +17,10 @@ jobs:
           persist-credentials: true
           fetch-depth: 0
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       - name: Create Matches Data
         run: |
@@ -57,5 +57,6 @@ jobs:
       - name: Commit & Push Changes
         run: |
           git add data/matches.json
-          git diff --cached --quiet || (git commit -m "🔄 تحديث بيانات المباريات [auto]")
+          git diff --cached --quiet || git commit -m "🔄 تحديث بيانات المباريات [auto]"
+          git pull --rebase
           git push
