--- a/.htaccess
+++ b/.htaccess
@@ -35,4 +35,6 @@
     <FilesMatch "\.(ttf|otf|eot|woff|woff2)$">
         Header set Access-Control-Allow-Origin "*"
     </FilesMatch>
+Redirect 301 /ads.txt https://srv.adstxtmanager.com/19390/[koralive.football].com
+
 </IfModule>
